# NixOSDots

./: .gitignore  .sops.yaml  README.md  flake.nix  gen-regist.sh  migrate-regist.sh  result
code/flakes/python/: flake.nix
dev-flakes/cpp/: .envrc  CMakeLists.txt  flake.nix
dev-flakes/python/: .envrc  flake.nix
dev-flakes/python/.direnv/: flake-profile-f1690cb7a949f1d65052f40eab54fbfa1b39ff22  flake-profile-f1690cb7a949f1d65052f40eab54fbfa1b39ff22.rc
dev-flakes/vulkan/: .envrc  flake.nix
dev-flakes/web/: .envrc  flake.nix
hosts/common/: home.nix  modules.nix
hosts/default/: home.nix
hosts/framework/: configuration.nix  hardware-configuration.nix  home.nix  modules.nix
hosts/laptop/: configuration.nix  hardware-configuration.nix  home.nix  modules.nix
hosts/light/: configuration.nix  hardware-configuration.nix  modules.nix
hosts/macos/: configuration.nix  home.nix  modules.nix
hosts/nixos/: configuration.nix  hardware-configuration.nix  home.nix  modules.nix
modules/: default.nix
modules/common/: ai.nix  direnv.nix  environment.nix  nix.nix  spotify.nix  ssh.nix  zed.nix  zed2.nix
modules/home-manager/: hyprland.nix  nvim.nix  shell.nix  spicetify.nix  zed.nix  zen.nix
modules/home-manager/Hyprland/: hyprland.nix  scripts.nix
modules/macos/: ollama.nix  vesktop.nix
modules/nixos/: bootloader.nix  locale.nix  secrets.nix  secureboot.nix  swap.nix  wireless.nix  xfce.nix
modules/nixos/desktop/: bluetooth.nix  lightDM.nix  utils.nix
modules/nixos/gaming/: amd.nix  gstreamer.nix  kernel.nix  mod.nix  nvidia.nix  (+3 more)
secrets/: secrets.yaml
(+3 files in other folders)
